<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CAL_C</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="clear">Clear</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="back">&lt;--</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">X</string>
    <string name="div">/</string>
    <string name="log">Log</string>
    <string name="exp">e</string>
    <string name="per">%</string>
    <string name="dot">.</string>
    <string name="fact">n!</string>
    <string name="square">X^2</string>
    <string name="mode">Mode</string>
    <string name="inverse">1 / X</string>
    <string name="ce">CE</string>

</resources>
