<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="1dp"
    
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_margin="1px"
        android:layout_toLeftOf="@+id/button1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignRight="@+id/button1"
        android:layout_margin="1px"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/nine" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_margin="1px"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/six" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_margin="1px"
        android:layout_toLeftOf="@+id/button6"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/dot" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignRight="@+id/button9"
        android:layout_margin="1px"
        android:layout_marginRight="27dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_margin="1px"
        android:layout_toRightOf="@+id/button12"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/eight" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button12"
        android:layout_margin="1px"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/four" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_margin="1px"
        android:layout_toLeftOf="@+id/button4"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/five" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:background="@android:color/background_light"
        android:gravity="right"
        android:text=""
        android:textSize="27sp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button19"
        android:layout_alignLeft="@+id/button14"
        android:text="@string/div" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button20"
        android:layout_alignBottom="@+id/button20"
        android:layout_alignLeft="@+id/button16"
        android:text="@string/exp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button18"
        android:layout_alignLeft="@+id/button18"
        android:text="@string/log" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button17"
        android:layout_alignLeft="@+id/button21"
        android:text="@string/square" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button18"
        android:layout_alignBottom="@+id/button18"
        android:layout_alignLeft="@+id/button13"
        android:text="@string/mode" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button22"
        android:layout_alignLeft="@+id/button22"
        android:text="@string/inverse" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/button5"
        android:layout_alignTop="@+id/textView1"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:text="@string/ce"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignLeft="@+id/button19"
        android:text="@string/equal" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button18"
        android:layout_alignLeft="@+id/button15"
        android:text="@string/per" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_marginRight="25dp"
        android:layout_toLeftOf="@+id/button12"
        android:text="@string/fact" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button21"
        android:layout_alignBottom="@+id/button21"
        android:layout_marginRight="19dp"
        android:layout_toLeftOf="@+id/button21"
        android:text="@string/mul" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button14"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/button16"
        android:text="@string/sub" />

    <include
        android:id="@+id/button13_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button15"
        android:layout_below="@+id/textView1"
        layout="@layout/button13" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="1px"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button20"
        android:layout_alignLeft="@+id/button1"
        android:layout_margin="1px"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/three" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button20"
        android:layout_margin="1px"
        android:layout_toLeftOf="@+id/button1"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/two" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button20"
        android:layout_margin="1px"
        android:layout_toLeftOf="@+id/button2"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/one" />

</RelativeLayout>